--- a/vijay/restapp/static/admin.html
+++ b/vijay/restapp/static/admin.html
@@ -145,6 +145,11 @@
                     <p>Specialty: Middle Eastern Cuisine</p>
                 </div>
                 <div class="cook">
+                    <img src="my.png" alt="Cook 5">
+                    <h4>Chef Sunil</h4>
+                    <p>Specialty: Manager</p>
+                </div>
+                <div class="cook">
                     <img src="cook6.jpeg" alt="Cook 6">
                     <h4>Chef Emily</h4>
                     <p>Specialty: Vegan Dishes</p>
